# test_nbpatch

./: Add license  CMakeCache.txt  CMakeLists.txt  CREDITS.md  Makefile  README.md  cmake_install.cmake
src/: CMakeLists.txt  houdinipatches.cpp  logging.h  main.cpp  main.h  ndk_transpatches.cpp  patch_tools.cpp  patch_tools.h
